# Optimization_Engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
config/: example_multi_asset.yaml  legacy_optluis.yaml
docs/superpowers/plans/: 2026-04-27-optimization-engine-ux-and-speed.md
docs/superpowers/specs/: 2026-04-27-optimization-engine-ux-and-speed-design.md
notebooks/: example.ipynb
scripts/: run_optimization.py
src/optimization_engine/: __init__.py  cli.py  config.py  engine.py  frontier.py  scenarios.py  ui_state.py
src/optimization_engine/analytics/: __init__.py  performance.py  relative.py  risk.py
src/optimization_engine/data/: __init__.py  covariance.py  fred.py  fx.py  loader.py  yahoo.py
src/optimization_engine/optimizers/: __init__.py  _bounds.py  _cvxpy_helpers.py  base.py  black_litterman.py  cvar.py  factory.py  hrp.py  max_diversification.py  mean_variance.py  naive.py  requirements.py  risk_parity.py
src/optimization_engine/reporting/: __init__.py  exporters.py  plots.py
tests/: test_bounds_projection.py  test_fred_loader.py  test_frontier_parallel.py  test_fx.py  test_optimizers.py  test_requirements.py  test_scenarios.py  test_ui_logic.py  test_ui_state.py  test_yahoo_loader.py
